--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,6 @@
 
 # dependencies
 /node_modules
-/package-lock.json
-/package.json
 
 # profiling files
 chrome-profiler-events*.json
@@ -46,3 +44,5 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+package.json
+package-lock.json
