--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jquery": "^3.3.1",
     "jquery-sparkline": "^2.4.0",
     "ng-click-outside": "^3.2.0",
+    "ng-image-slider": "^2.6.4",
     "ng-select2": "^1.2.4",
     "ng2-google-charts": "^6.1.0",
     "ng2-toasty": "^4.0.3",
