--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/core": "~9.0.0",
     "@angular/forms": "~9.0.0",
     "@angular/localize": "^11.0.5",
+    "@angular/material": "^7.3.2",
+    "@angular/material-moment-adapter": "^7.3.2",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
@@ -41,6 +43,7 @@
     "froala-editor": "^3.2.5",
     "jquery": "^3.3.1",
     "jquery-sparkline": "^2.4.0",
+    "moment": "^2.29.1",
     "ng-click-outside": "^3.2.0",
     "ng-image-slider": "^2.6.4",
     "ng-select2": "^1.2.4",
