--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "froala-editor": "^3.2.5",
     "jquery": "^3.3.1",
     "jquery-sparkline": "^2.4.0",
+    "jw-angular-pagination": "^1.2.0",
     "moment": "^2.29.1",
     "ng-click-outside": "^3.2.0",
     "ng-image-slider": "^2.6.4",
