--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ng-image-slider": "^2.6.4",
     "ng-select2": "^1.2.4",
     "ng2-google-charts": "^6.1.0",
+    "ng2-ion-range-slider": "^2.0.0",
     "ng2-toasty": "^4.0.3",
     "ngx-perfect-scrollbar": "^10.0.1",
     "popper.js": "^1.16.1",
