--- a/package.json
+++ b/package.json
@@ -43,14 +43,13 @@
     "froala-editor": "^3.2.5",
     "jquery": "^3.3.1",
     "jquery-sparkline": "^2.4.0",
-    "jw-angular-pagination": "^1.2.0",
     "moment": "^2.29.1",
     "ng-click-outside": "^3.2.0",
     "ng-image-slider": "^2.6.4",
     "ng-select2": "^1.2.4",
     "ng2-google-charts": "^6.1.0",
-    "ng2-ion-range-slider": "^2.0.0",
     "ng2-toasty": "^4.0.3",
+    "ng5-slider": "^1.2.6",
     "ngx-perfect-scrollbar": "^10.0.1",
     "popper.js": "^1.16.1",
     "primeflex": "^2.0.0",
