--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jquery": "^3.3.1",
     "jquery-sparkline": "^2.4.0",
     "moment": "^2.29.1",
+    "moment-range": "^4.0.2",
     "ng-click-outside": "^3.2.0",
     "ng-image-slider": "^2.6.4",
     "ng-select2": "^1.2.4",
